--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -18,6 +18,7 @@ jobs:
   
   print: 
     runs-on: ubuntu-latest
+    needs: [my_testings]
     steps:
       - name: print hello
         run: echo "Hello wrld from print"
