--- a/.github/workflows/demo-actions.yml
+++ b/.github/workflows/demo-actions.yml
@@ -21,6 +21,10 @@ jobs:
       run: |
          echo "Hello Massage1"
          echo "Application Name: ${{ env.APPLICATION_NAME }}"
+    - name: Git clone my repo 
+      uses: actions/checkout@v1
+    - name: list files 
+      run: ls -lah
   
   print: 
     runs-on: ubuntu-latest
@@ -30,3 +34,5 @@ jobs:
         run: echo "Hello wrld from print"
       - name: print PKG name 
         run: echo " ${{ env.PACKAGE }}" 
+      - name: test aws 
+        run: aws --version 
